Update env file with expected repo, remove key

--- a/sample-deploy/deployfiles/cms0057.container.env
+++ b/sample-deploy/deployfiles/cms0057.container.env
@@ -28,7 +28,7 @@ WEBGATEWAY_NETWORK_IP_ADDRESS=
 # Instance info
 
 # name of the solution image
-HS_IMAGE_PATH=containers.intersystems.com/intersystems/<CMS0057_SOLUTION_IMAGE_NAME>
+HS_IMAGE_PATH=containers.intersystems.com/intersystems/intersystems_payer_services_<YOUR_SOLUTION>
 
 
 # Version for solution image
