Update README and files per feedback

--- a/sample-deploy/deployfiles/cms0057.container.env
+++ b/sample-deploy/deployfiles/cms0057.container.env
@@ -7,7 +7,7 @@ COMPOSE_PROJECT_NAME=<YOUR_STACK_NAME>
  
 # Subnet for host
 NETWORK_SUBNET=
-# Needs to be a reachable host that the container will be running on, e.g qddockerubuntu2.iscinternal.com
+# Needs to be a reachable host that the container will be running on, e.g <hostname>.<your_domain>>.com
 HOSTNAME=<YOUR_HOSTNAME>
 # HS product type. Indicated in build spec. One per image type e.g. hsucr, hspd etc.
 INSTANCE_NAME=<YOUR_INSTANCE_NAME>
@@ -66,4 +66,4 @@ IAM_USER_PWD=<YOUR_IAM_PASSWORD>
  
 ISC_IAM_IMAGE="containers.intersystems.com/intersystems/iam:3.4"
 #   This will be used in this env-var constructed in docker-compose: ISC_IRIS_URL=IAM:${IAM_USER_PWD}@${HOSTNAME}:${WEBGATEWAY_SECURE_PORT:-8443}/api/iam/license
-#   e.g. ISC_IRIS_URL="IAM:MyNewIAMPwd@use7400bzhang.iscinternal.com:8443/api/iam/license". No need to specify this var in env file though as it will be built in docker-compose-iam
+#   e.g. ISC_IRIS_URL="IAM:<MyNewIAMPwd>@<MyHost>:<MyPort>/api/iam/license". No need to specify this var in env file though as it will be built in docker-compose-iam
