Update description for IRIS instance name

--- a/sample-deploy/deployfiles/cms0057.container.env
+++ b/sample-deploy/deployfiles/cms0057.container.env
@@ -9,7 +9,7 @@ COMPOSE_PROJECT_NAME=<YOUR_STACK_NAME>
 NETWORK_SUBNET=
 # Needs to be a reachable host that the container will be running on, e.g <hostname>.<your_domain>>.com
 HOSTNAME=<YOUR_HOSTNAME>
-# HS product type. Indicated in build spec. One per image type e.g. hsucr, hspd etc.
+# Name of your IRIS For Health instance.
 INSTANCE_NAME=<YOUR_INSTANCE_NAME>
  
 # Web Gateway info
