--- a/sample-deploy/deployfiles/hp.container.env
+++ b/sample-deploy/deployfiles/hp.container.env
@@ -7,8 +7,10 @@ COMPOSE_PROJECT_NAME=<YOUR_STACK_NAME>
  
 # Subnet for host
 NETWORK_SUBNET=
-# Needs to be a reachable host that the container will be running on, e.g <hostname>.<your_domain>>.com
+# Needs to be a reachable host that the container will be running on, e.g <hostname>.<your_domain>.com
 HOSTNAME=<YOUR_HOSTNAME>
+# Public facing IP address
+HOSTNAME_IP=<YOUR_HOST_IP_ADDRESS>
 # Name of your IRIS For Health instance.
 INSTANCE_NAME=<YOUR_INSTANCE_NAME>
  
@@ -28,22 +30,17 @@ WEBGATEWAY_NETWORK_IP_ADDRESS=
 # Instance info
 
 # name of the solution image
-HS_IMAGE_PATH=containers.intersystems.com/intersystems/intersystems_payer_services_<YOUR_SOLUTION>
-
-
+HP_IMAGE_PATH=containers.intersystems.com/intersystems/intersystems_payer_services_<YOUR_SOLUTION>
 # Version for solution image
-HS_IMAGE_VERSION=<SPECIFIC_IMAGE_VERSION>
+HP_IMAGE_VERSION=<SPECIFIC_IMAGE_VERSION>
 # Unique hostname for HS
-HS_INSTANCE_UNIQUE_HOSTNAME=<YOUR_UNIQUE_IDENTIFIER>
+IRIS_INSTANCE_UNIQUE_HOSTNAME=<YOUR_UNIQUE_IDENTIFIER>
 # External port from which INSECURE communication to instance superserver is accessible
 INSTANCE_SUPERSERVER_PORT=
 # External port from which INSECURE communication to instance private webserver is accessible
 INSTANCE_WEBSERVER_PORT=
 # IP address for instance. MUST be part of same subnet as NETWORK_SUBNET above
 INSTANCE_NETWORK_IP_ADDRESS=
- 
-# Public facing IP address
-HOSTNAME_IP=<YOUR_HOST_IP_ADDRESS>
  
 # Storage mounts
  
@@ -63,7 +60,6 @@ EXTERNAL_ISC_DATA_ROOT_DIRECTORY=
 
 # Password for the IAM user set on the IRIS instance; should match the value in merge.cpf file
 IAM_USER_PWD=<YOUR_IAM_PASSWORD>
- 
 ISC_IAM_IMAGE="containers.intersystems.com/intersystems/iam:3.4"
 #   This will be used in this env-var constructed in docker-compose: ISC_IRIS_URL=IAM:${IAM_USER_PWD}@${HOSTNAME}:${WEBGATEWAY_SECURE_PORT:-8443}/api/iam/license
 #   e.g. ISC_IRIS_URL="IAM:<MyNewIAMPwd>@<MyHost>:<MyPort>/api/iam/license". No need to specify this var in env file though as it will be built in docker-compose-iam
