--- a/sample-deploy/deployment-files/iam.container.env
+++ b/sample-deploy/deployment-files/iam.container.env
@@ -4,22 +4,25 @@
 # Container stack name
 COMPOSE_PROJECT_NAME=<YOUR_IAM_STACK_NAME>
  
-# Shared info across IAM services
- 
-# Subnet for host
+# Subnet for container stack
 NETWORK_SUBNET=
-# Needs to be a reachable host that the container will be running on, e.g <hostname>.<your_domain>.com
-HOSTNAME=<YOUR_HOSTNAME>
-# Public facing IP address
-HOSTNAME_IP=<YOUR_HOST_IP_ADDRESS>
 
-# External port from which SECURE communication to solution stack's web gateway is accessible
-WEBGATEWAY_SECURE_PORT=
-# Unique hostname for IRIS Instance on which IAM gets deployed
-IRIS_INSTANCE_UNIQUE_HOSTNAME=<IRIS_HOST_UNIQUE_IDENTIFIER>
+# Unique hostname where IAM gets deployed
+IAM_UNIQUE_HOSTNAME=<IAM_HOST_UNIQUE_IDENTIFIER>
  
 # Password for the IAM user set on the IRIS instance; should match the value in merge.cpf file
 IAM_USER_PWD=<YOUR_IAM_PASSWORD>
 #   This will be used in this env-var constructed in docker-compose: ISC_IRIS_URL=IAM:${IAM_USER_PWD}@${HOSTNAME}:${WEBGATEWAY_SECURE_PORT:-8443}/api/iam/license
 #   e.g. ISC_IRIS_URL="IAM:<my_IAM_password>@<my_host>>.<my_domain>.com:<my_webgateway_port>/api/iam/license". No need to specify this var in env file though as it will be built in docker-compose-iam
 ISC_IAM_IMAGE="containers.intersystems.com/intersystems/iam:3.4"
+
+
+# The following variables are for IAM to connect to an IRIS instance via http 
+# The IRIS instance must have IAM-enabled license key.
+
+# Hostname of where IRIS lives. Needs to be a reachable host that the container will be running on, e.g <hostname>.<your_domain>.com
+IRIS_HOSTNAME=<YOUR_HOSTNAME>
+# Public facing IP address for host on which IRIS lives
+IRIS_HOSTNAME_IP=<YOUR_HOST_IP_ADDRESS>
+# External port from which SECURE communication to solution stack's web gateway is accessible
+WEBGATEWAY_SECURE_PORT=
