Parameterized hard-coded IAM ports

--- a/sample-deploy/iam.container.env
+++ b/sample-deploy/iam.container.env
@@ -16,6 +16,16 @@ IAM_USER_PWD=<YOUR_IAM_PASSWORD>
 #   e.g. ISC_IRIS_URL="IAM:<my_IAM_password>@<my_host>>.<my_domain>.com:<my_webgateway_port>/api/iam/license". No need to specify this var in env file though as it will be built in docker-compose-iam
 ISC_IAM_IMAGE="containers.intersystems.com/intersystems/iam:3.4"
 
+# IAM port for kong admin  to listen to
+IAM_PORT=
+
+# IAM port for kong portal UI
+IAM_KONG_PORTAL_PORT=
+
+# IAm port for kong admin UI
+IAM_KONG_ADMIN_PORT=
+
+
 
 # The following variables are for IAM to connect to an IRIS instance via http 
 # The IRIS instance must have IAM-enabled license key.
