--- a/sample-deploy/docker-compose-iam.yml
+++ b/sample-deploy/docker-compose-iam.yml
@@ -47,7 +47,7 @@ services:
       KONG_STATUS_SSL_CERT_KEY: /certs/tls.key
       KONG_ADMIN_ACCESS_LOG: /dev/stdout
       KONG_ADMIN_ERROR_LOG: /dev/stderr
-      KONG_ADMIN_LISTEN: 0.0.0.0:8444 ssl
+      KONG_ADMIN_LISTEN: 0.0.0.0:${IAM_PORT:-8444} ssl
       KONG_ANONYMOUS_REPORTS: 'off'
       KONG_CASSANDRA_CONTACT_POINTS: db
       KONG_DATABASE: postgres
@@ -59,20 +59,20 @@ services:
       KONG_PROXY_ERROR_LOG: /dev/stderr
       KONG_PORTAL: 'on'
       KONG_PORTAL_GUI_PROTOCOL: https
-      KONG_PORTAL_GUI_HOST: ${IRIS_HOSTNAME}:8446
-      KONG_ADMIN_GUI_URL: https://${IRIS_HOSTNAME}:8445
+      KONG_PORTAL_GUI_HOST: ${IRIS_HOSTNAME}:${IAM_KONG_PORTAL_PORT:-8446}
+      KONG_ADMIN_GUI_URL: https://${IRIS_HOSTNAME}:${IAM_KONG_ADMIN_PORT:-8445}
       ISC_IRIS_URL: IAM:${IAM_USER_PWD}@${IRIS_HOSTNAME}:${WEBGATEWAY_SECURE_PORT:-8443}/api/iam/license
     links:
       - db:db
     ports:
-      - target: 8443
-        published: 8446
+      - target: ${WEBGATEWAY_SECURE_PORT:-8443}
+        published: ${IAM_KONG_PORTAL_PORT:-8446}
         protocol: tcp
-      - target: 8444
-        published: 8444
+      - target: ${IAM_PORT:-8444}
+        published: ${IAM_PORT:-8444}
         protocol: tcp
-      - target: 8445
-        published: 8445
+      - target: ${IAM_KONG_ADMIN_PORT:-8445}
+        published: ${IAM_KONG_ADMIN_PORT:-8445}
         protocol: tcp
     restart: on-failure
     extra_hosts:
@@ -102,7 +102,7 @@ services:
     image: alpine/curl
     environment:
      IAM_HOSTNAME: ${IRIS_HOSTNAME}
-     IAM_PORT: 8444
+     IAM_PORT: ${IAM_PORT:-8444}
      IAM_USER: IAM
      IAM_USER_PWD: ${IAM_USER_PWD}
      INSTANCE_WEBGATEWAY_HOSTNAME: ${IRIS_HOSTNAME}
