--- a/sample-deploy/docker-compose-iam.yml
+++ b/sample-deploy/docker-compose-iam.yml
@@ -1,5 +1,5 @@
 # to execute, run $ docker-compose -f <your-docker-compose>.yml --env-file <your-product>.env up
-# e.g. $ docker-compose -f ./deployfiles/docker-compose-iam.yml --env-file ./deployfiles/iam.container.env up
+# e.g. $ docker-compose -f docker-compose-iam.yml --env-file iam.container.env up
 version: '3.7'
 networks:
   federated-network:
