Update files according to dev feedback

--- a/sample-deploy/docker-compose-iam.yml
+++ b/sample-deploy/docker-compose-iam.yml
@@ -59,8 +59,8 @@ services:
       KONG_PROXY_ERROR_LOG: /dev/stderr
       KONG_PORTAL: 'on'
       KONG_PORTAL_GUI_PROTOCOL: https
-      KONG_PORTAL_GUI_HOST: ${IRIS_HOSTNAME}:${IAM_KONG_PORTAL_PORT:-8446}
-      KONG_ADMIN_GUI_URL: https://${IRIS_HOSTNAME}:${IAM_KONG_ADMIN_PORT:-8445}
+      KONG_PORTAL_GUI_HOST: ${IAM_UNIQUE_HOSTNAME}:${IAM_KONG_PORTAL_PORT:-8446}
+      KONG_ADMIN_GUI_URL: https://${IAM_UNIQUE_HOSTNAME}:${IAM_KONG_ADMIN_PORT:-8445}
       ISC_IRIS_URL: IAM:${IAM_USER_PWD}@${IRIS_HOSTNAME}:${WEBGATEWAY_SECURE_PORT:-8443}/api/iam/license
     links:
       - db:db
