--- a/sample-deploy/iam.container.env
+++ b/sample-deploy/iam.container.env
@@ -11,9 +11,10 @@ NETWORK_SUBNET=
 IAM_UNIQUE_HOSTNAME=<IAM_HOST_UNIQUE_IDENTIFIER>
  
 # Password for the IAM user set on the IRIS instance; should match the value in merge.cpf file
+#  This will be used in this env-var constructed in docker-compose: ISC_IRIS_URL=IAM:${IAM_USER_PWD}@${HOSTNAME}:${WEBGATEWAY_SECURE_PORT:-8443}/api/iam/license
 IAM_USER_PWD=<YOUR_IAM_PASSWORD>
-#   This will be used in this env-var constructed in docker-compose: ISC_IRIS_URL=IAM:${IAM_USER_PWD}@${HOSTNAME}:${WEBGATEWAY_SECURE_PORT:-8443}/api/iam/license
-#   e.g. ISC_IRIS_URL="IAM:<my_IAM_password>@<my_host>>.<my_domain>.com:<my_webgateway_port>/api/iam/license". No need to specify this var in env file though as it will be built in docker-compose-iam
+
+# Official IAM image name and tag in the following format: <image name>:<version tag>
 ISC_IAM_IMAGE="containers.intersystems.com/intersystems/iam:3.4"
 
 # IAM port for kong admin  to listen to
