--- a/sample-deploy/HP/hp.container.env
+++ b/sample-deploy/HP/hp.container.env
@@ -55,3 +55,9 @@ ISC_DATA_DIRECTORY=
 ISC_DATA_ROOT_DIRECTORY=
 # Where IRIS-specific data will be persisted on the host system
 EXTERNAL_ISC_DATA_ROOT_DIRECTORY=
+# Where HP-specific config files live on the host
+EXTERNAL_HP_CONFIG_DIRECTORY=
+# Where HP-specific config files live on the container
+HP_CONFIG_DIRECTORY=
+# The name of the hp json config file on the host.
+HP_CONFIG_FILE_NAME=
