--- a/sample-deploy/IAM/iam.container.env
+++ b/sample-deploy/IAM/iam.container.env
@@ -67,3 +67,12 @@ IAM_PORT=
 IAM_KONG_API_PORT=
 # IAM port for Kong Manager (GUI). Listens for HTTPS traffic.
 IAM_KONG_UI_PORT=
+
+# Where IAM-specific config files live on the host
+EXTERNAL_IAM_CONFIG_DIRECTORY=
+# Where IAM-specific config files live on the container
+IAM_CONFIG_DIRECTORY=
+# The name of the iam register script on the host.
+IAM_REGISTER_SCRIPT=
+# The name of the iam services config JSON file on the host.
+IAM_REGISTER_CONFIG=
